some styling the notes

--- a/style/style.scss
+++ b/style/style.scss
@@ -17,4 +17,10 @@
   body {
     background-color: rgb(170, 170, 170);
   }
+  .note-item {
+    width: 31%;
+  }
+  .note-form {
+    max-width: 600px;
+  }
 }
