--- a/style/note.scss
+++ b/style/note.scss
@@ -1,10 +1,58 @@
+// NOTE FORM
+
+.note-form {
+  // background-color: green;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// NOTE ITEMS
+
 .note-item-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: space-around;
+  flex-wrap: wrap-reverse;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  margin: auto;
+  // align-content: flex-end;
+  list-style-type: none;
+  padding: 0;
 }
 
 .note-item {
-  width: 30%;
+  width: 44%;
+  // height: 200px;
+  margin: 10px;
+  background-color: rgb(0, 59, 36);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: space-around;
+  color: white;
+}
+ 
+.note-text {
+  overflow: hidden;
+  flex: 1;
+}
+
+.note-header {
+  background-color: rgb(44, 44, 44);
+  display: flex;
+  color: white;
+  width: 100%;
 }
